# DiLLeMa

./: .gitignore  .gitmodules  CLI_USAGE.md  LICENSE  README.md  build.sh  install_ray_miniconda_python.sh  pyproject.toml  requirement.txt  requirements.txt
.github/workflows/: build.yml
analysis/: deploy_vllm.py  ray.ipynb
dillema/: __init__.py  __main__.py  cli.py  common.py
dillema/app/: main.py  package.json  pnpm-lock.yaml
dillema/app/static/css/: styles.css
dillema/app/templates/: index.html
dillema/models/: __init__.py  model.py
dillema/ray/: main.py
dillema/ray_cluster/: client_node.py  head_node.py
dillema/serve/: __init__.py  llm.py
docs/: DOCUMENTATION.md
evaluation/: README.txt  cross_network_multinode_setup.py  dual_node_setup.sh  evaluation_results_1750576184.json  openvpn_multinode_setup.sh  ray_model_deployer.py  ray_model_deployer_fixed.py  ray_model_evaluator.py  robby_pc.pem  simple_gpu_launcher.sh  vllm_fixed_deployer.py  vllm_multi_node_deployer.py
evaluation/results/: 1_gpu.json
test/: test_example.py
