[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DiLLeMa"
description = "This repository contains a docker-compose file that can be used to run a Ray cluster on a single machine"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "botocore>=1.40.53",
    "pyarrow>=21.0.0",
    "ray[default,serve]==2.50.0",
    "vllm>=0.11.0",
]
dynamic=[ "version" ]

authors = [
    { name = "Robby Ulung Pambudi", email = "robby.pambudi10@gmail.com" },
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/robbypambudi/DiLLeMa"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = {attr = "dillema.__version__"}

[project.scripts]
dillema = "dillema.cli:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs", "build", "temp*"]
